[package]
name = "json_value_search"
version = "0.1.1"
authors = ["Jean-Marc Fiaschi <jm.fiaschi@gmail.com>"]
edition = "2018"
description = "Interface to search elements into serde_json::Value."
license = "MIT OR Apache-2.0"
include = ["src/*","benches/*","Cargo.toml","LICENCE-APACHE","LICENCE-MIT"]
repository = "https://github.com/jmfiaschi/json_value_search"
keywords = ["serde", "json", "value", "search"]
readme = "README.md"
categories = ["encoding"]

[dependencies]
serde_json = "1.0"
regex = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
