[package]
name = "json_value_search"
version ="1.0.1"
authors = ["Jean-Marc Fiaschi <jm.fiaschi@gmail.com>"]
edition = "2018"
description = "Interface to search elements into serde_json::Value."
license = "MIT OR Apache-2.0"
include = ["src/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
repository = "https://github.com/jmfiaschi/json_value_search"
keywords = ["serde", "json", "value", "search"]
readme = "README.md"
categories = ["encoding"]

[dependencies]
serde_json = { version="1.0", default-features = false }
regex = "1.11"
lazy_static = "1.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
path = "benches/bench.rs"

[profile.release]
lto = true
